added coding comparsion of heapsort against two other sorting algorithms and slight touch ups to other work

--- a/graph-isomorphism.ipynb
+++ b/graph-isomorphism.ipynb
@@ -49,7 +49,7 @@
     "\n",
     "Graph: Graph is a mathematical representation of a network and it describes the relationship between lines and points. A graph consists of some points and lines between them. The length of the lines and position of the points do not matter. Each object in a graph is called a node. [[1]](https://economictimes.indiatimes.com/definition/graph-theory)\n",
     "\n",
-    "Vertex: Vetex also known as a node represents a point on graph. Vertices is the plural term of multiple vertex in a graph. [[2]](https://www.tutorialspoint.com/edges-and-vertices-of-graph)\n",
+    "Vertex: Vetex also known as a node represents a point on graph. Vertices is the plural term of multiple vertex in a graph. \n",
     "\n",
     "Edges: Are the set of lines which interconnect the vertices. A degree of a vertex is the amount of edges connecting it. [[2]](https://www.tutorialspoint.com/edges-and-vertices-of-graph)\n",
     "\n",
@@ -141,11 +141,11 @@
    "source": [
     "<b>P versus NP </b> is one of the biggest interests to people working with computers and in mathematics. \n",
     "\n",
-    "One way of asking it is, \"Can every solved problem whose answer can be checked quickly by a computer, also be quickly solved by a computer?\". [[7]](https://simple.wikipedia.org/wiki/P_versus_NP)\n",
+    "One way of explaining it is, can every solved problem whose answer can be checked quickly by a computer, also be quickly solved by a computer?. \n",
     "\n",
-    "Math problems are referred to as P or NP, whether they are solvable in finite polynomial time. P problems have their solution time bound to a polynomial and so are relatively fast for computers to solve, and so are considered \"easy\". [[7]](https://simple.wikipedia.org/wiki/P_versus_NP)\n",
-    "\n",
-    "NP problems are fast (and so \"easy\") for a computer to check, but are not necessarily easy to solve. [[7]](https://simple.wikipedia.org/wiki/P_versus_NP)\n",
+    "Math problems are referred to as P or NP, whether they are solvable in finite polynomial time. P problems have their solution time bound to a polynomial and so are relatively fast for computers to solve, and so are considered \"easy\". \n",
+    "NP problems are fast and easy for a computer to check, but are not really easy to solve. \n",
+    "[[7]](https://simple.wikipedia.org/wiki/P_versus_NP)\n",
     "\n",
     "The P vs NP is one of the millenium problems which are 7 big unanswered math problems if solved, the person who solves it will get 1 million dollars. [[8]](https://simple.wikipedia.org/wiki/Millennium_Prize_Problems)\n",
     "\n",
@@ -185,11 +185,10 @@
     "For two graphs to be Isomorphic, the following must be present:\n",
     "\n",
     "\n",
-    "- The amount of edges in the 2 graphs must be same.  [[16]](https://www.gatevidyalay.com/graph-isomorphism/#:~:text=Graph%20Isomorphism%20Conditions%2D&text=Number%20of%20vertices%20in%20both,the%20graphs%20must%20be%20same.)\n",
+    "- The amount of edges in the 2 graphs must be same.  \n",
     "\n",
-    "- The amount of vertices in the 2 graphs must be same.  [[16]](https://www.gatevidyalay.com/graph-isomorphism/#:~:text=Graph%20Isomorphism%20Conditions%2D&text=Number%20of%20vertices%20in%20both,the%20graphs%20must%20be%20same.)\n",
-    "\n",
-    "- The length formed by the vertices with equal degree in one graph, are the same length in the other graph as well.  [[16]](https://www.gatevidyalay.com/graph-isomorphism/#:~:text=Graph%20Isomorphism%20Conditions%2D&text=Number%20of%20vertices%20in%20both,the%20graphs%20must%20be%20same.)\n",
+    "- The amount of vertices in the 2 graphs must be same.  \n",
+    "- The length formed by the vertices with equal degree in one graph, are the same length in the other graph as well.  \n",
     "\n",
     "- The Degree sequence of the 2 graphs must be same.  [[16]](https://www.gatevidyalay.com/graph-isomorphism/#:~:text=Graph%20Isomorphism%20Conditions%2D&text=Number%20of%20vertices%20in%20both,the%20graphs%20must%20be%20same.)   [[5]](https://en.wikipedia.org/wiki/Graph_isomorphism_problem)"
    ]
@@ -613,10 +612,11 @@
    "id": "7a9e8199",
    "metadata": {},
    "source": [
-    "An adjacency list represents a graph as an array of linked lists. The index of the array represents a vertex and each element in its linked list represents the other vertices that form an edge with the vertex. [[13]](https://www.programiz.com/dsa/graph-adjacency-list#:~:text=An%20adjacency%20list%20represents%20a,an%20edge%20with%20the%20vertex.)\n",
+    "An adjacency list represents a graph as an array of linked lists. The index of the array represents a vertex and each element in its linked list represents the other vertices that form an edge with the vertex. \n",
+    "[[10]](https://www.geeksforgeeks.org/graph-and-its-representations/)\n",
     "\n",
-    "The Following is the adjacency list representation of the above <b>GreenGraph.</b> [[10]](https://www.geeksforgeeks.org/graph-and-its-representations/)\n",
-    " "
+    "\n",
+    "The Following is the adjacency list representation of the above <b>GreenGraph.</b>"
    ]
   },
   {
@@ -669,18 +669,13 @@
     }
    ],
    "source": [
-    "\"\"\"\n",
-    "A Python program to demonstrate the adjacency\n",
-    "list representation of the graph\n",
-    "\"\"\"\n",
-    "\n",
     "# A class to represent the adjacency list of the node\n",
     "\n",
     "\n",
     "class AdjNode:\n",
-    "    def __init__(self, data):\n",
-    "        self.vertex = data\n",
-    "        self.next = None\n",
+    "    def __init__(s, d):\n",
+    "        s.vertex = d\n",
+    "        s.next = None\n",
     "\n",
     "\n",
     "# A class to represent a graph. A graph\n",
@@ -689,30 +684,30 @@
     "# vertices \"V\"\n",
     "\n",
     "class Graph:\n",
-    "    def __init__(self, vertices):\n",
-    "        self.V = vertices\n",
-    "        self.graph = [None] * self.V\n",
+    "    def __init__(s, v):\n",
+    "        s.V = v\n",
+    "        s.graph = [None] * s.V\n",
     "\n",
     "# Function to add an edge in an undirected graph\n",
-    "    def add_edge(self, src, dest):\n",
+    "    def add_edge(s, source, destination):\n",
     "        \n",
     "# Adding the node to the source node\n",
-    "        node = AdjNode(dest)\n",
-    "        node.next = self.graph[src]\n",
-    "        self.graph[src] = node\n",
+    "        node = AdjNode(destination)\n",
+    "        node.next = s.graph[source]\n",
+    "        s.graph[source] = node\n",
     "\n",
     "# Adding the source node to the destination as\n",
     "# it is the undirected graph\n",
     "\n",
-    "        node = AdjNode(src)\n",
-    "        node.next = self.graph[dest]\n",
-    "        self.graph[dest] = node\n",
+    "        node = AdjNode(source)\n",
+    "        node.next = s.graph[destination]\n",
+    "        s.graph[destination] = node\n",
     "\n",
     "# Function to print the graph\n",
-    "    def print_graph(self):\n",
-    "        for i in range(self.V):\n",
+    "    def print_graph(s):\n",
+    "        for i in range(s.V):\n",
     "            print(\"Adjacency list of vertex {}\\n head\".format(i), end=\"\")\n",
-    "            temp = self.graph[i]\n",
+    "            temp = s.graph[i]\n",
     "            while temp:\n",
     "                print(\" -> {}\".format(temp.vertex), end=\"\")\n",
     "                temp = temp.next\n",
@@ -733,7 +728,8 @@
     "\n",
     "    graph.print_graph()\n",
     "\n",
-    "# credit Kanav Malhotra\n"
+    "\n",
+    "\n"
    ]
   },
   {
@@ -824,6 +820,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "This matrix represents the relationships of the BlueGraph above.\n",
       "[[0 1 0 0 1]\n",
       " [1 0 1 1 1]\n",
       " [0 1 0 1 1]\n",
@@ -835,6 +832,9 @@
    "source": [
     "# Import numpy library.\n",
     "import numpy as np\n",
+    "\n",
+    "\n",
+    "print(\"This matrix represents the relationships of the BlueGraph above.\")\n",
     "\n",
     "# This matrix represents the relationships of the BlueGraph above.\n",
     "print(nx.to_numpy_array(g).astype(np.uint8))"
