--- a/heap-sort.ipynb
+++ b/heap-sort.ipynb
@@ -30,7 +30,9 @@
     "\n",
     "import networkx as nx\n",
     "\n",
-    "import math"
+    "import math\n",
+    "\n",
+    "from timeit import default_timer as clock"
    ]
   },
   {
@@ -291,7 +293,7 @@
    "id": "33eacd9e",
    "metadata": {},
    "source": [
-    "So in summary what heap-sort divides its input into a sorted and an unsorted region, and it iteratively shrinks the unsorted region by extracting the largest element from it and inserting it into the sorted region. [[3]](https://en.wikipedia.org/wiki/Heapsort)"
+    "So in summary what heap-sort divides its input into a sorted and an unsorted region, and it iteratively shrinks the unsorted region by extracting the largest element from it and inserting it into the sorted region."
    ]
   },
   {
@@ -484,14 +486,19 @@
    "id": "63b2ae3f",
    "metadata": {},
    "source": [
-    "Before we can talk about the complexity of the heap sort algorithm, we need to know what Big O notation means in terms of computer science. Big O notation is one of the most fundamental tools for computer scientists to analyze the cost of an algorithm. [[11]](https://www.freecodecamp.org/news/big-o-notation-why-it-matters-and-why-it-doesnt-1674cfa8a23c/)\n",
+    "Before we can talk about the complexity of the heap sort algorithm, we need to know what Big O notation means in terms of computer science. Big O notation is one of the most fundamental tools for computer scientists to analyze the cost of an algorithm. \n",
     "\n",
     "Big O notation is used to describe the complexity of an algorithm when measuring its efficiency, which in this case means how well the algorithm scales with the size of the dataset. \n",
     "\n",
-    "Big O is represented with the following syntax: O(n). The value we're concerned with is between the parentheses and will in most cases include the variable n, which denotes the size of the algorithm's input. the algorithm will be a function, and n will typically refers to the size of a collection taken by the function as its input. The value between the parentheses expresses that function's complexity in terms of n. [ Reference [12]](https://guides.codepath.com/compsci/Big-O-Complexity-Analysis#:~:text=Big%20O%20notation%20is%20used,the%20size%20of%20the%20dataset.)\n",
+    "Big O is represented with the following syntax: O(n). <b>N</b> indicates the size of the algorithm's input. The algorithm is a function, and n refers to the size of a collection taken by the function as its input. The value between the parentheses expresses that function's complexity in terms of n. \n",
     "\n",
+    "Complexity is measured in two dimensions: \n",
     "\n",
-    "Complexity is measured in two dimensions: time (how long a function takes to complete), and space (how much memory a function consumes while executing). [ Reference [12]](https://guides.codepath.com/compsci/Big-O-Complexity-Analysis#:~:text=Big%20O%20notation%20is%20used,the%20size%20of%20the%20dataset.)\n",
+    "<b>Time</b> = How long a function takes to complete.\n",
+    "\n",
+    "<b>Space</b> = How much memory a function consumes while executing. \n",
+    "\n",
+    "[ Reference [12]](https://guides.codepath.com/compsci/Big-O-Complexity-Analysis#:~:text=Big%20O%20notation%20is%20used,the%20size%20of%20the%20dataset.)\n",
     "\n",
     "The 2 diagrams belows show some of Big O notations and their performances:\n"
    ]
@@ -531,11 +538,11 @@
     "\n",
     "### How HeapSort is O(n log n):\n",
     "\n",
-    "To start off with, the height of complete binary tree proves that the height of a heap is log N. [[19]](https://medium.com/@angeloacebedo/run-time-analysis-heap-sort-8b81d6403508)\n",
+    "To start off with, the height of complete binary tree proves that the height of a heap is log N. \n",
     "\n",
-    "In heap sort, you build a max heap and then extract the root element one by one, after every extraction you make the last element as root and then run the heapify() procedure. The heapify procedure takes O(log n), time. [[19]](https://medium.com/@angeloacebedo/run-time-analysis-heap-sort-8b81d6403508)\n",
+    "In heap sort, you build a max heap and then extract the root element one by one, after every extraction you make the last element as root and then run the heapify() procedure. The heapify procedure takes O(log n), time. \n",
     "\n",
-    "Also, you do this heapify procedure n times(one time for each element), so <b>Time complexity</b> becomes O(n log n).[[19]](https://medium.com/@angeloacebedo/run-time-analysis-heap-sort-8b81d6403508) [[13]](https://www.quora.com/How-does-Heapsort-take-O-nlogn-time)\n",
+    "Also, you do this heapify procedure n times(one time for each element), so <b>Time complexity</b> becomes O(n log n).[[19]](https://medium.com/@angeloacebedo/run-time-analysis-heap-sort-8b81d6403508) \n",
     "\n",
     "The <b> Space Complexity </b>:\n",
     "\n",
@@ -577,9 +584,7 @@
    "source": [
     "What the above diagram shows about heapsort is:\n",
     "\n",
-    "- When doubling the input quantity, sorting takes a little more than twice as long; this corresponds to the expected quasilinear runtime O(n log n).\n",
-    "- For presorted input data, Heapsort is about three times faster than for unsorted data.\n",
-    "- Input data sorted in ascending order will be sorted about as fast as input data sorted in descending order. [[16]](https://www.happycoders.eu/algorithms/heapsort/)"
+    " For presorted input data, Heapsort is about 3 times quicker than for when it's unsorted data. When doubling the input quantity, sorting takes more than twice as long; this makes sense with the expected runtime O(n log n). Input data sorted in ascending order is sorted in about the same speed as input data sorted in descending order. [[16]](https://www.happycoders.eu/algorithms/heapsort/)"
    ]
   },
   {
@@ -608,14 +613,263 @@
    "id": "3122fec0",
    "metadata": {},
    "source": [
-    "What the above diagram shows is that Heapsort is slower than Quicksort by factor 3.6 and slower than Merge Sort by factor 2.4 for randomly distributed input data. For sorted data, heapsort is eight to nine times slower than quicksort and two times slower than Merge Sort. [[16]](https://www.happycoders.eu/algorithms/heapsort/)\n",
+    "What the above diagram shows is that Heapsort is slower than Quicksort and slower than Merge Sort  or randomly distributed input data. For sorted data, heapsort is up to 9 times slower than quicksort and 2 times slower than Merge Sort. \n",
     "\n",
-    "<b>Heapsort vs quicksort: </b> quicksort is a lot faster than heapsort but due to quicksort having its worst-case be O(n²), heapsort may get used over it at times. [[16]](https://www.happycoders.eu/algorithms/heapsort/)\n",
+    "<b>Heapsort vs quicksort: </b> quicksort is a lot faster than heapsort but due to quicksort having its worst-case be O(n²), heapsort may get used over it at times. \n",
     "\n",
-    "<b>Heapsort vs merge sort:</b> Merge sort is faster and more stable than heapsort. However, heapsort has the advantage of not requiring additional memory unlike merge sort which requires additional memory in order of O(n). [[16]](https://www.happycoders.eu/algorithms/heapsort/)\n",
+    "<b>Heapsort vs merge sort:</b> Merge sort is faster and more stable than heapsort. However, Merge sort requires additional memory unlike heapsort which doesn't.[[16]](https://www.happycoders.eu/algorithms/heapsort/)\n",
     "\n",
     "#### Summary\n",
-    "The Heap sort algorithm exhibits consistent performance. This means it performs equally well in the best, average and worst cases. Because of its guaranteed performance, it is particularly suitable to use in systems with critical response time.[[17]](https://sciencing.com/the-advantages-of-heap-sort-12749895.html)\n"
+    "The Heap sort algorithm exhibits consistent performance. This means it performs equally well in the best, average and worst cases. Because of its guaranteed performance, it is particularly suitable to use in systems with vital response time.[[17]](https://sciencing.com/the-advantages-of-heap-sort-12749895.html)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4218f020",
+   "metadata": {},
+   "source": [
+    "### Heapsort vs Quicksort & Merge sort Implementation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03645d64",
+   "metadata": {},
+   "source": [
+    "###### Merge sort\n",
+    "[[Reference 20]](https://www.geeksforgeeks.org/merge-sort/)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "b373f976",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mergeSort(myList):\n",
+    "    if len(myList) > 1:\n",
+    "        mid = len(myList) // 2\n",
+    "        left = myList[:mid]\n",
+    "        right = myList[mid:]\n",
+    "\n",
+    "        # Recursive call on each half\n",
+    "        mergeSort(left)\n",
+    "        mergeSort(right)\n",
+    "\n",
+    "        # Two iterators for traversing the two halves\n",
+    "        i = 0\n",
+    "        j = 0\n",
+    "        \n",
+    "        # Iterator for the main list\n",
+    "        k = 0\n",
+    "        \n",
+    "        while i < len(left) and j < len(right):\n",
+    "            if left[i] <= right[j]:\n",
+    "              # The value from the left half has been used\n",
+    "              myList[k] = left[i]\n",
+    "              # Move the iterator forward\n",
+    "              i += 1\n",
+    "            else:\n",
+    "                myList[k] = right[j]\n",
+    "                j += 1\n",
+    "            # Move to the next slot\n",
+    "            k += 1\n",
+    "\n",
+    "        # For all the remaining values\n",
+    "        while i < len(left):\n",
+    "            myList[k] = left[i]\n",
+    "            i += 1\n",
+    "            k += 1\n",
+    "\n",
+    "        while j < len(right):\n",
+    "            myList[k]=right[j]\n",
+    "            j += 1\n",
+    "            k += 1\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f076b684",
+   "metadata": {},
+   "source": [
+    "###### Quick sort\n",
+    "\n",
+    "[[Reference 21]](https://www.geeksforgeeks.org/python-program-for-quicksort/)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c0b05cc2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def QuickSort(arr):\n",
+    "\n",
+    "    elements = len(arr)\n",
+    "    \n",
+    "    #Base case\n",
+    "    if elements < 2:\n",
+    "        return arr\n",
+    "    \n",
+    "    current_position = 0 #Position of the partitioning element\n",
+    "\n",
+    "    for i in range(1, elements): #Partitioning loop\n",
+    "         if arr[i] <= arr[0]:\n",
+    "              current_position += 1\n",
+    "              temp = arr[i]\n",
+    "              arr[i] = arr[current_position]\n",
+    "              arr[current_position] = temp\n",
+    "\n",
+    "    temp = arr[0]\n",
+    "    arr[0] = arr[current_position] \n",
+    "    arr[current_position] = temp #Brings pivot to it's appropriate position\n",
+    "    \n",
+    "    left = QuickSort(arr[0:current_position]) #Sorts the elements to the left of pivot\n",
+    "    right = QuickSort(arr[current_position+1:elements]) #sorts the elements to the right of pivot\n",
+    "\n",
+    "    arr = left + [arr[current_position]] + right #Merging everything together\n",
+    "    \n",
+    "    return arr\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b102de5d",
+   "metadata": {},
+   "source": [
+    "### Comparison"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "57276bd7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original list:\n",
+      "54 26 93 17 77 31 44 55 20 \n",
+      "\n",
+      " Heap Sort= Sorted list:\n",
+      "17 20 26 31 44 54 55 77 93 \n",
+      "\n",
+      "Time to finish: \n",
+      " 0.00019100000000005224\n"
+     ]
+    }
+   ],
+   "source": [
+    "from timeit import default_timer as timer\n",
+    "\n",
+    "# list array for all 3 sorting algorithms\n",
+    "myList = [54,26,93,17,77,31,44,55,20]\n",
+    "\n",
+    "n = len(myList) # gets the size of array\n",
+    "\n",
+    "#Output of original list\n",
+    "print(\"Original list:\")\n",
+    "for i in range(n):\n",
+    "    print(\"%d \" % myList[i], end='')\n",
+    "\n",
+    "# getting the time\n",
+    "start=timer();\n",
+    "heapSort(myList)\n",
+    "end=timer();\n",
+    "\n",
+    "#final time\n",
+    "time1=end-start\n",
+    "\n",
+    "#Output sorted list\n",
+    "print(\"\\n\\n Heap Sort= Sorted list:\")\n",
+    "for i in range(n):\n",
+    "  print(\"%d \" % myList[i], end='')\n",
+    "\n",
+    "print(\"\\n\\nTime to finish: \\n\", time1)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "db350114",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      " Merge Sort = Sorted list:\n",
+      "17 20 26 31 44 54 55 77 93 \n",
+      "\n",
+      "Time to finish: \n",
+      " 0.00016330000000008837\n"
+     ]
+    }
+   ],
+   "source": [
+    "#getting the time\n",
+    "s=timer();\n",
+    "mergeSort(myList)\n",
+    "e=timer();\n",
+    "\n",
+    "#final time\n",
+    "time2=e-s\n",
+    "\n",
+    "#Output sorted list\n",
+    "print(\"\\n\\n Merge Sort = Sorted list:\")\n",
+    "for i in range(n):\n",
+    "  print(\"%d \" % myList[i], end='')\n",
+    "\n",
+    "print(\"\\n\\nTime to finish: \\n\", time2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "c7f45bb9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      " Quick Sort = Sorted list:\n",
+      "17 20 26 31 44 54 55 77 93 \n",
+      "\n",
+      "Time to finish: \n",
+      " 0.00014399999999969992\n"
+     ]
+    }
+   ],
+   "source": [
+    "#getting the time\n",
+    "s1=timer();\n",
+    "QuickSort(myList)\n",
+    "e1=timer();\n",
+    "\n",
+    "#final time\n",
+    "time3=e1-s1\n",
+    "\n",
+    "#Output sorted list\n",
+    "print(\"\\n\\n Quick Sort = Sorted list:\")\n",
+    "for i in range(n):\n",
+    "  print(\"%d \" % myList[i], end='')\n",
+    "\n",
+    "print(\"\\n\\nTime to finish: \\n\", time3)"
    ]
   },
   {
@@ -660,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "3036847f",
    "metadata": {},
    "outputs": [
@@ -733,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "cbf2a83e",
    "metadata": {},
    "outputs": [
@@ -764,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "99fa82ca",
    "metadata": {},
    "outputs": [
@@ -795,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "4624ee09",
    "metadata": {},
    "outputs": [
@@ -826,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "fd839d2d",
    "metadata": {},
    "outputs": [
@@ -860,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "ea3c4985",
    "metadata": {},
    "outputs": [
@@ -954,7 +1208,11 @@
     "\n",
     "opengenus Time & Space Complexity of Heap Sort https://iq.opengenus.org/time-complexity-of-heap-sort/ [18] <br>\n",
     "\n",
-    "run time analysis of heapsort https://medium.com/@angeloacebedo/run-time-analysis-heap-sort-8b81d6403508  [19]<br>\n"
+    "run time analysis of heapsort https://medium.com/@angeloacebedo/run-time-analysis-heap-sort-8b81d6403508  [19]<br>\n",
+    "\n",
+    "merge sort https://www.geeksforgeeks.org/merge-sort/ [20]\n",
+    "\n",
+    "quicksort https://www.geeksforgeeks.org/python-program-for-quicksort/ [21]"
    ]
   }
  ],
