added more work to explaination of heapsort and why use graph theory with heapsort

--- a/graph-isomorphism.ipynb
+++ b/graph-isomorphism.ipynb
@@ -127,11 +127,7 @@
     "\n",
     "The Graph Isomorphism problem is not known to be solvable in polynomial time nor to be NP-complete, and therefore may be in the computational complexity class NP-intermediate. [[5]](https://en.wikipedia.org/wiki/Graph_isomorphism_problem)\n",
     "\n",
-    "An NP-intermediate problem is a decision problem that:\n",
-    "\n",
-    "- is in NP (that is, \"yes\" answers can be verified in polynomial time),\n",
-    "- is not in P (that is, there is no polynomial-time algorithm for solving the problem), and\n",
-    "- is not NP-complete. [[15]](https://stackoverflow.com/questions/40773886/what-are-np-intermediate-problems/40773945#40773945)"
+    "An NP-intermediate problem means that it is in NP. Meaning yes answers can be done in polynomial time. It also means that it is not in P and there is no polynomial-time algorithm for solving the problem. Lastly it is not NP-complete. [[15]](https://stackoverflow.com/questions/40773886/what-are-np-intermediate-problems/40773945#40773945)"
    ]
   },
   {
@@ -339,7 +335,7 @@
    "source": [
     "\n",
     "\n",
-    "The algorithm above is not very efficient and is brute force code for isomorphism. This algorithm does some checks before it compares if graphs are isomorphic or not by taking 2 matrices and will return either a true or false. [[9]](https://tonicanada.medium.com/brute-force-code-for-isomorphisms-1241ef180570) [[14]](https://gist.github.com/tonicanada/5f689540d30e51a9837d660b801ef9cb)"
+    "The algorithm above is not very efficient and is brute force code for isomorphism. This algorithm does some checks before it compares if graphs are isomorphic or not by taking 2 Adjacency matrices and will return either a true or false. [[9]](https://tonicanada.medium.com/brute-force-code-for-isomorphisms-1241ef180570) [[14]](https://gist.github.com/tonicanada/5f689540d30e51a9837d660b801ef9cb)"
    ]
   },
   {
