--- a/heap-sort.ipynb
+++ b/heap-sort.ipynb
@@ -293,6 +293,8 @@
    "id": "33eacd9e",
    "metadata": {},
    "source": [
+    "Now that we I have explained what heap, binary tree and min/max heaps are. I can now discuss how these relate to the heap sort algorithm. Heap sort is a comparison based sorting algorithm due to it's implementation of the binary heap data structure. Heap sort builds a max-heap it does this by using the finding child node formula I show above. Heapsort then takes the root element of the binary tree and the lowest valued node at the end and swaps them. It then decreases the heap by 1. Then repeats the whole process again until the heap is empty. \n",
+    "\n",
     "So in summary what heap-sort divides its input into a sorted and an unsorted region, and it iteratively shrinks the unsorted region by extracting the largest element from it and inserting it into the sorted region."
    ]
   },
@@ -546,11 +548,8 @@
     "\n",
     "The <b> Space Complexity </b>:\n",
     "\n",
-    "Heapsort is an in-place designed sorting algorithm, the space requirement is constant and therefore, O(1). \n",
-    "This is because, in case of any input:\n",
-    "\n",
-    "- We arrange all the list items in place using a heap structure\n",
-    "- We put the removed item at the end of the same list after removing the max node from the max-heap.\n",
+    "Heapsort is an in-place designed sorting algorithm, the space requirement is constant meaning it's O(1). \n",
+    "This is because, in case of any input it arranges all the list items in place using a heap structure and puts the removed items at the end of the same list after removing the max node from the max-heap.\n",
     "\n",
     "This means we don't use any extra space when implementing the heapsort algorithm. This gives the algorithm a <b>Space Complexity </b> of O(1). [[18]](https://iq.opengenus.org/time-complexity-of-heap-sort/)\n",
     "\n"
@@ -763,7 +762,7 @@
       "17 20 26 31 44 54 55 77 93 \n",
       "\n",
       "Time to finish: \n",
-      " 0.00019100000000005224\n"
+      " 0.00022199999999994446\n"
      ]
     }
    ],
@@ -814,7 +813,7 @@
       "17 20 26 31 44 54 55 77 93 \n",
       "\n",
       "Time to finish: \n",
-      " 0.00016330000000008837\n"
+      " 0.00017729999999982482\n"
      ]
     }
    ],
@@ -851,7 +850,7 @@
       "17 20 26 31 44 54 55 77 93 \n",
       "\n",
       "Time to finish: \n",
-      " 0.00014399999999969992\n"
+      " 0.00018209999999996285\n"
      ]
     }
    ],
@@ -1155,6 +1154,14 @@
    "metadata": {},
    "source": [
     "The above shows what the graph looks like when it's been fully heapsorted. Using graphs I was able to visualise and explain step by step the process of the heap-sort algorithm. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1acf45a",
+   "metadata": {},
+   "source": [
+    "Using graph theory we are able to clearly show and understand the entire process of heap sort. Being able to visually and show what a binary tree, min/max heaps are using graphs helps get an understanding of the behind the scene workings of heapsort. Graphs allowed me to show step by step the process of heapsort. Graphs can remain mathematically correct to the corresponding data structures that it shows. Graph theory is the study of relationships given to sets of nodes and connections which can abstract and visualise anything from computer science and mathmatics. It helps us to understand and study these complex fields and make our own analysis of their topics."
    ]
   },
   {
