final touches with graph ismorphism

--- a/graph-isomorphism.ipynb
+++ b/graph-isomorphism.ipynb
@@ -86,7 +86,9 @@
     "Graphs can exist in different forms and look different to each other. Two graphs that have the same number of vertices, edges, and same edge connectivity are called isomorphic graphs. Even if they don't look like each other, the below diagram is an example of this: [[4]](https://www.tutorialspoint.com/graph_theory/graph_theory_isomorphism.htm)\n",
     "\n",
     "Isomorphism is a mapping for which an inverse mapping also exists. It's a way to describe equivalence.\n",
-    "Graphs are used in fields like pattern recognition, computer vision and matching. Efficient graph isomorphism algorithms could lead to big break throughs in these fields and produce great innovations. [[5]](https://en.wikipedia.org/wiki/Graph_isomorphism_problem)\n"
+    "Graphs are used in fields like pattern recognition, computer vision and matching. Efficient graph isomorphism algorithms could lead to big break throughs in these fields and produce great innovations. [[5]](https://en.wikipedia.org/wiki/Graph_isomorphism_problem)\n",
+    "\n",
+    "So let's recap. When 2 vertices are connected by an edge we say they are adjacent, Isomorphism in the context of graphs means a bijection that preserves adjacency. A bijection is a mapping from one to the other and from the other back to the one. So if 2 graphs are Isomorphic then we can create a mapping from one to the other each vertex in one graph can be mapped to a vertex in the other graph and when we do that it doesn't mess up the adjacency and we end up with the same edges, the same relation between the two graphs. \n"
    ]
   },
   {
@@ -161,6 +163,14 @@
    "metadata": {},
    "source": [
     "![11.PNG](attachment:11.PNG)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce2e98db",
+   "metadata": {},
+   "source": [
+    "So the \"problem\" part of the Graph Isomorphism Problem basically comes down to the difficulty of determining and identifying isomorphism in graphs with computers and how every algorithm created to check for Graph Isomorphism to date are not very efficient. One of these algorithms I display below, which is a brute force one."
    ]
   },
   {
@@ -901,14 +911,6 @@
     "\n",
     "GateVidyalay: Graph Isomorphism Conditions https://www.gatevidyalay.com/graph-isomorphism/#:~:text=Graph%20Isomorphism%20Conditions%2D&text=Number%20of%20vertices%20in%20both,the%20graphs%20must%20be%20same. [16]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f3c921a0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
