--- a/heap-sort.ipynb
+++ b/heap-sort.ipynb
@@ -729,33 +729,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def QuickSort(arr):\n",
-    "\n",
-    "    elements = len(arr)\n",
-    "    \n",
-    "    #Base case\n",
-    "    if elements < 2:\n",
+    "def partition(arr, low, high):\n",
+    "    i = (low-1)         # index of smaller element\n",
+    "    pivot = arr[high]     # pivot\n",
+    " \n",
+    "    for j in range(low, high):\n",
+    " \n",
+    "        # If current element is smaller than or\n",
+    "        # equal to pivot\n",
+    "        if arr[j] <= pivot:\n",
+    " \n",
+    "            # increment index of smaller element\n",
+    "            i = i+1\n",
+    "            arr[i], arr[j] = arr[j], arr[i]\n",
+    " \n",
+    "    arr[i+1], arr[high] = arr[high], arr[i+1]\n",
+    "    return (i+1)\n",
+    " \n",
+    "# The main function that implements QuickSort\n",
+    "# arr[] --> Array to be sorted,\n",
+    "# low  --> Starting index,\n",
+    "# high  --> Ending index\n",
+    " \n",
+    "# Function to do Quick sort\n",
+    " \n",
+    " \n",
+    "def quickSort(arr, low, high):\n",
+    "    if len(arr) == 1:\n",
     "        return arr\n",
-    "    \n",
-    "    current_position = 0 #Position of the partitioning element\n",
-    "\n",
-    "    for i in range(1, elements): #Partitioning loop\n",
-    "         if arr[i] <= arr[0]:\n",
-    "              current_position += 1\n",
-    "              temp = arr[i]\n",
-    "              arr[i] = arr[current_position]\n",
-    "              arr[current_position] = temp\n",
-    "\n",
-    "    temp = arr[0]\n",
-    "    arr[0] = arr[current_position] \n",
-    "    arr[current_position] = temp #Brings pivot to it's appropriate position\n",
-    "    \n",
-    "    left = QuickSort(arr[0:current_position]) #Sorts the elements to the left of pivot\n",
-    "    right = QuickSort(arr[current_position+1:elements]) #sorts the elements to the right of pivot\n",
-    "\n",
-    "    arr = left + [arr[current_position]] + right #Merging everything together\n",
-    "    \n",
-    "    return arr\n",
+    "    if low < high:\n",
+    " \n",
+    "        # pi is partitioning index, arr[p] is now\n",
+    "        # at right place\n",
+    "        pi = partition(arr, low, high)\n",
+    " \n",
+    "        # Separately sort elements before\n",
+    "        # partition and after partition\n",
+    "        quickSort(arr, low, pi-1)\n",
+    "        quickSort(arr, pi+1, high)\n",
+    " \n",
     "\n",
     "\n",
     "\n"
@@ -786,7 +798,7 @@
       "17 20 26 31 44 54 55 77 93 \n",
       "\n",
       "Time to finish: \n",
-      " 0.0001651999999996434\n"
+      " 0.0001541999999998822\n"
      ]
     }
    ],
@@ -837,14 +849,17 @@
       "17 20 26 31 44 54 55 77 93 \n",
       "\n",
       "Time to finish: \n",
-      " 0.00017919999999982394\n"
+      " 0.00016460000000018127\n"
      ]
     }
    ],
    "source": [
+    "# list array for all 3 sorting algorithms\n",
+    "myL = [54,26,93,17,77,31,44,55,20]\n",
+    "\n",
     "#getting the time\n",
     "s=timer();\n",
-    "mergeSort(myList)\n",
+    "mergeSort(myL)\n",
     "e=timer();\n",
     "\n",
     "#final time\n",
@@ -853,7 +868,7 @@
     "#Output sorted list\n",
     "print(\"\\n\\n Merge Sort = Sorted list:\")\n",
     "for i in range(n):\n",
-    "  print(\"%d \" % myList[i], end='')\n",
+    "  print(\"%d \" % myL[i], end='')\n",
     "\n",
     "print(\"\\n\\nTime to finish: \\n\", time2)"
    ]
@@ -874,14 +889,17 @@
       "17 20 26 31 44 54 55 77 93 \n",
       "\n",
       "Time to finish: \n",
-      " 0.00018740000000017076\n"
+      " 0.00019200000000019202\n"
      ]
     }
    ],
    "source": [
+    "# list array for all 3 sorting algorithms\n",
+    "myA = [54,26,93,17,77,31,44,55,20]\n",
+    "\n",
     "#getting the time\n",
     "s1=timer();\n",
-    "QuickSort(myList)\n",
+    "quickSort(myA, 0, n-1)\n",
     "e1=timer();\n",
     "\n",
     "#final time\n",
@@ -890,7 +908,7 @@
     "#Output sorted list\n",
     "print(\"\\n\\n Quick Sort = Sorted list:\")\n",
     "for i in range(n):\n",
-    "  print(\"%d \" % myList[i], end='')\n",
+    "  print(\"%d \" % myA[i], end='')\n",
     "\n",
     "print(\"\\n\\nTime to finish: \\n\", time3)"
    ]
