Graph iso complexity done, finished draft

--- a/graph-isomorphism.ipynb
+++ b/graph-isomorphism.ipynb
@@ -864,7 +864,9 @@
    "cell_type": "markdown",
    "id": "f47d503c",
    "metadata": {},
-   "source": []
+   "source": [
+    "The brute force way the Graph Isomorphic algorithm above is makes it very inefficent and costly. It checks all the permutations of the vertices of the 2nd graph until a matching mapping is found. So in worst case we have to check all of the permutations and don't find a match. This means the The time complexity of this algorithm is O(N2N!) where N is the number of vertices in graphs 1 and 2. [[17]](https://stars.library.ucf.edu/cgi/viewcontent.cgi?article=1105&context=istlibrary&httpsredir=1&referer=)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -909,7 +911,9 @@
     "\n",
     "stack overflow: What are NP-Intermediate problems? https://stackoverflow.com/questions/40773886/what-are-np-intermediate-problems/40773945#40773945 [15]\n",
     "\n",
-    "GateVidyalay: Graph Isomorphism Conditions https://www.gatevidyalay.com/graph-isomorphism/#:~:text=Graph%20Isomorphism%20Conditions%2D&text=Number%20of%20vertices%20in%20both,the%20graphs%20must%20be%20same. [16]"
+    "GateVidyalay: Graph Isomorphism Conditions https://www.gatevidyalay.com/graph-isomorphism/#:~:text=Graph%20Isomorphism%20Conditions%2D&text=Number%20of%20vertices%20in%20both,the%20graphs%20must%20be%20same. [16]\n",
+    "\n",
+    "University of central florida STARS https://stars.library.ucf.edu/cgi/viewcontent.cgi?article=1105&context=istlibrary&httpsredir=1&referer= [17]"
    ]
   }
  ],
