minor spelling fix

--- a/graph-isomorphism.ipynb
+++ b/graph-isomorphism.ipynb
@@ -865,7 +865,7 @@
    "id": "f47d503c",
    "metadata": {},
    "source": [
-    "The brute force way the Graph Isomorphic algorithm above is makes it very inefficent and costly. It checks all the permutations of the vertices of the 2nd graph until a matching mapping is found. So in worst case we have to check all of the permutations and don't find a match. This means the The time complexity of this algorithm is O(N2N!) where N is the number of vertices in graphs 1 and 2. [[17]](https://stars.library.ucf.edu/cgi/viewcontent.cgi?article=1105&context=istlibrary&httpsredir=1&referer=)"
+    "The brute force nature of the Graph Isomorphic algorithm above, makes it very inefficent and costly. It checks all the permutations of the vertices of the 2nd graph until a matching mapping is found. So in worst case we have to check all of the permutations and don't find a match. This means the time complexity of this algorithm is O(N2N!) where N is the number of vertices in graphs 1 and 2. [[17]](https://stars.library.ucf.edu/cgi/viewcontent.cgi?article=1105&context=istlibrary&httpsredir=1&referer=)"
    ]
   },
   {
